--- a/blocks/element/__image-container/element__image-container.css
+++ b/blocks/element/__image-container/element__image-container.css
@@ -1,6 +1,6 @@
 .element__image-container {
-  width: 282px;
-  height: 282px;
+  /*width: 282px;
+  height: 282px;*/
 }
 
 @media (max-width: 950px) {
