--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,7 +7,7 @@
   border: 2px solid #ffffff;
   border-radius: 2px;
   padding: 14px 0;
-  background-image: url(../../../images/button__add_white.png);
+  background-image: url(../../../images/button__add_white.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-origin: content-box;
