--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,17 @@
 .element__image {
-  max-width: 100%;
-  max-height: 100%;
+  /*max-width: 100%;
+  max-height: 100%;*/
+  width: 282px;
+  height: 282px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  margin: auto;
+  display: flex;
+}
+
+@media (max-width: 950px) {
+  .element__image {
+    display: flex;
+    margin: auto;
+  }
 }
