--- a/blocks/pop-up/__input-field/_type/pop-up__input-field_type_name.css
+++ b/blocks/pop-up/__input-field/_type/pop-up__input-field_type_name.css
@@ -1,8 +1,9 @@
-.pop-up__input-name {
-  margin: 54px auto 0;
+.pop-up__input-field_type_name {
+  display: flex;
+  margin: 0 auto;
   width: 358px;
   height: 14px;
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
@@ -13,14 +14,11 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-}
-
-.pop-up__input-name:focus {
   outline: none;
 }
 
 @media (max-width: 950px) {
-  .pop-up__input-name {
+  .pop-up__input-field_type_name {
     width: 238px;
   }
 }
