--- a/blocks/pop-up/__title/pop-up__title.css
+++ b/blocks/pop-up/__title/pop-up__title.css
@@ -4,7 +4,7 @@
   line-height: 29px;
   color: #000000;
   font-family: "Inter", "Arial", sans-serif;
-  margin: 2px 0 0 36px;
+  margin: 0 64px 54px 36px;
   display: flex;
 }
 
@@ -12,6 +12,7 @@
   .pop-up__title {
     font-size: 18px;
     line-height: 22px;
-    margin: 5px auto 0;
+    margin: 5px auto 75px;
+    /*непонятно, почему верхние поля нужно выставлять кривые*/
   }
 }
