--- a/blocks/pop-up/__window/pop-up__window.css
+++ b/blocks/pop-up/__window/pop-up__window.css
@@ -1,11 +1,11 @@
 .pop-up__window {
   width: 430px;
-  height: 330px;
+  min-height: 330px;
   background-color: #ffffff;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-}
+  }
 
 @media (max-width: 950px) {
   .pop-up__window {
