--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,14 @@
 .profile__avatar {
-  background-image: url('../../../images/userpic__Jacques-Yves\ Cousteau.jpg');
+  background-image: url("../../../images/userpic__Jacques-Yves\ Cousteau.jpg");
   width: 120px;
   height: 120px;
   background-size: cover;
   border-radius: 50%;
   margin: 0 30px 0 0;
+}
+
+@media (max-width: 950px) {
+  .profile__avatar {
+    margin: 0;
+  }
 }
