--- a/pages/index.css
+++ b/pages/index.css
@@ -10,8 +10,8 @@
 @import url(../blocks/profile/__info/profile__info-role.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__info/profile__info-edit-button.css);
-@import url(../blocks/element/element.css);
-@import url(../blocks//element/__image-container/element__image-container.css);
+@import url(../blocks/element/elements.css);
+/*@import url(../blocks//element/__image-container/element__image-container.css);*/
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__text/element__text.css);
 @import url(../blocks/element/__symbols-container/element__symbols-container.css);
@@ -23,7 +23,7 @@
 @import url(../blocks/pop-up/__window/pop-up__window.css);
 @import url(../blocks/pop-up/__close-icon/pop-up__close-icon.css);
 @import url(../blocks/pop-up/__title/pop-up__title.css);
-@import url(../blocks/pop-up/__input/pop-up__input.css);
-@import url(../blocks/pop-up/__input/pop-up__input-name.css);
-@import url(../blocks/pop-up/__input/pop-up__input-role.css);
+@import url(../blocks/pop-up/__input/pop-up__input-form.css);
+@import url(../blocks/pop-up/__input-field/_type/pop-up__input-field_type_role.css);
+@import url(../blocks/pop-up/__input-field/_type/pop-up__input-field_type_name.css);
 @import url(../blocks/pop-up/__input/pop-up__input-save.css);
