--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,7 +4,8 @@
   height: 33px;
   display: flex;
   margin: 0 0 41px;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 @media (max-width: 950px) {
