--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,17 +1,17 @@
 .element__image {
-  /*max-width: 100%;
-  max-height: 100%;*/
   width: 282px;
   height: 282px;
+  margin: 0;
+  z-index: -1;
+  display: flex;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  margin: auto;
-  display: flex;
+  /*не понял, как сделать закругление контента grid-ячейки,
+  углы ячейки закругляются, а контент - нет и выпирает за границы*/
 }
 
 @media (max-width: 950px) {
   .element__image {
-    display: flex;
     margin: auto;
   }
 }
