--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,12 @@
 .header {
-  max-height: 74px;
   max-width: 880px;
-  border-bottom: 1px solid rgba(84, 84, 84, .7);
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   margin: 45px auto 0;
 }
 
 @media (max-width: 950px) {
   .header {
     margin: 28px auto 0;
-    max-height: 56px;
     max-width: 320px;
   }
 }
