--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,4 @@
-.profile__info_edit-button {
+.profile__edit-button {
   background-color: #000000;
   border: 1px solid #FFFFFF;
   height: 24px;
@@ -11,12 +11,12 @@
   background-repeat: no-repeat;
 }
 
-.profile__info_edit-button:hover {
+.profile__edit-button:hover {
   opacity: 0.6;
 }
 
 @media (max-width: 950px) {
-  .profile__info_edit-button {
+  .profile__edit-button {
     height: 18px;
     width: 18px;
     padding: 4.25px 4.25px;
