--- a/blocks/profile/__info/profile__info-role.css
+++ b/blocks/profile/__info/profile__info-role.css
@@ -1,10 +1,11 @@
 .profile__info-role {
   grid-column-start: 1;
   grid-column-end: 3;
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
+  margin: 0;
 }
 
 @media (max-width: 950px) {
