--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -6,8 +6,8 @@
   display: flex;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  /*не понял, как сделать закругление контента grid-ячейки,
-  углы ячейки закругляются, а контент - нет и выпирает за границы*/
+  /*не понял как сделать закругление контента grid-ячейки,
+  углы ячейки закругляются, а контент нет*/
 }
 
 @media (max-width: 950px) {
