--- a/blocks/pop-up/__title/pop-up__title.css
+++ b/blocks/pop-up/__title/pop-up__title.css
@@ -13,6 +13,7 @@
     font-size: 18px;
     line-height: 22px;
     margin: 5px auto 75px;
-    /*непонятно, почему верхние поля нужно выставлять кривые*/
+    /*непонятно почему для корректного отображения
+    значения верхних полей нужно выставлять не по макету*/
   }
 }
