--- a/blocks/profile/__info/profile__info-role.css
+++ b/blocks/profile/__info/profile__info-role.css
@@ -6,6 +6,8 @@
   line-height: 22px;
   font-weight: 400;
   margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media (max-width: 950px) {
