--- a/pages/index.css
+++ b/pages/index.css
@@ -10,8 +10,8 @@
 @import url(../blocks/profile/__info/profile__info-role.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
-@import url(../blocks/element/elements.css);
-@import url(../blocks/element/element.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/content/__element/content__element.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__text/element__text.css);
 @import url(../blocks/element/__symbols-container/element__symbols-container.css);
@@ -23,8 +23,11 @@
 @import url(../blocks/pop-up/__window/pop-up__window.css);
 @import url(../blocks/pop-up/__close-icon/pop-up__close-icon.css);
 @import url(../blocks/pop-up/__title/pop-up__title.css);
-@import url(../blocks/pop-up/__input/pop-up__input-form.css);
+@import url(../blocks/pop-up/__input-form/pop-up__input-form.css);
 @import url(../blocks/pop-up/__input-field/_type/pop-up__input-field_type_role.css);
 @import url(../blocks/pop-up/__input-field/_type/pop-up__input-field_type_name.css);
 @import url(../blocks/pop-up/__input-field/pop-up__input-field.css);
-@import url(../blocks/pop-up/__input/pop-up__input-save.css);
+@import url(../blocks/pop-up/__input-save/pop-up__input-save.css);
+
+/*не понимаю как правильно по БЭМ расположить CSS-папки и файлы
+для существующих в html вложенности и названиях классов*/
