--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -4,6 +4,11 @@
   line-height: 48px;
   font-weight: 500;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 294px;
+  align-self: start;
 }
 
 @media (max-width: 950px) {
@@ -11,5 +16,7 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    grid-column-start: 2;
+    align-self: start;
   }
 }
