--- a/blocks/profile/__info-role/profile__info-role.css
+++ b/blocks/profile/__info-role/profile__info-role.css
@@ -6,6 +6,10 @@
   line-height: 22px;
   font-weight: 400;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 336px;
 }
 
 @media (max-width: 950px) {
@@ -13,5 +17,6 @@
     text-align: center;
     font-size: 14px;
     line-height: 17px;
+    grid-column-start: 2;
   }
 }
