--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,10 +2,8 @@
   max-width: 336px;
   max-height: 73px;
   display: grid;
-  /*grid-template-columns: 294px 24px;*/
   grid-template-columns: minmax(max-content, 294px) 24px;
   grid-template-rows: 39px 18px;
-  /*margin-left: 30px;*/
   column-gap: 18px;
   row-gap: 16px;
   color: white;
@@ -16,8 +14,7 @@
     margin: 22.25px 65px 0 65px;
     column-gap: 10px;
     row-gap: 14px;
-    grid-template-columns: max-content 24px;
+    grid-template-columns: 24px max-content 24px;
     grid-template-rows: 26px 14px;
-
   }
 }
