--- a/blocks/profile/__info-role/profile__info-role.css
+++ b/blocks/profile/__info-role/profile__info-role.css
@@ -18,6 +18,7 @@
     font-size: 14px;
     line-height: 17px;
     grid-column-start: 2;
-    max-width: 282px;
+    grid-column-end: 4;
+    max-width: 230px;
   }
 }
