--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -14,7 +14,7 @@
     margin: 22.25px 65px 0 65px;
     column-gap: 10px;
     row-gap: 14px;
-    grid-template-columns: 24px max-content 24px;
+    grid-template-columns: 24px minmax(max-content, 282px) 24px;
     grid-template-rows: 26px 14px;
   }
 }
