added delete button

--- a/blocks/content/__element-delete-button/content__element-delete-button.css
+++ b/blocks/content/__element-delete-button/content__element-delete-button.css
@@ -3,7 +3,7 @@
   background: none;
   cursor: pointer;
   padding: 0;
-  background-image: url("../../../images/del.svg");
+  background-image: url('../../../images/del.svg');
   width: 18px;
   height: 19px;
   position: absolute;
