--- a/pages/index.css
+++ b/pages/index.css
@@ -40,4 +40,6 @@
 @import url(../blocks/pop-up/__input-field/_type/pop-up__input-field_type_link.css);
 @import url(../blocks/pop-up/__input-save/_place/pop-up__input-save_place.css);
 
-@import url(../blocks/pop-up/_opened/pop-up_opened.css);
+.pop-up__place_opened{
+  display: flex;
+}
