--- a/blocks/content/__element-image/content__element-image.css
+++ b/blocks/content/__element-image/content__element-image.css
@@ -2,10 +2,10 @@
   width: 282px;
   height: 282px;
   margin: 0;
-  z-index: -1;
   display: flex;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  object-fit: cover;
   /*не понял как сделать закругление контента grid-ячейки,
   углы ячейки закругляются, а контент нет*/
 }
