--- a/pages/index.css
+++ b/pages/index.css
@@ -38,5 +38,8 @@
 @import url(../blocks/pop-up/__input-field/_type/pop-up__input-field_type_place.css);
 @import url(../blocks/pop-up/__input-field/_type/pop-up__input-field_type_link.css);
 @import url(../blocks/pop-up/__input-save/_place/pop-up__input-save_place.css);
+@import url(../blocks/pop-up/_type/pop-up__type_pic.css);
+@import url(../blocks/pop-up/__image/pop-up__image.css);
+@import url(../blocks/pop-up/__image-subtitle/pop-up__image-subtitle.css);
+@import url(../blocks/pop-up/__window-pic/pop-up__window-pic.css);
 @import url(../blocks/pop-up/_opened/pop-up_opened.css);
-
